fixed the bug with the canvas overflowing the page

--- a/app/style.css
+++ b/app/style.css
@@ -87,7 +87,7 @@ canvas {
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 100%;
+    height: 90vh;
     line-height: 0; /* not the slightest idea why this line works https://stackoverflow.com/a/41840263/8272888 */
 }
 
